Add Reactor Ex